# botw-ist

./: .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  Cargo.toml  Justfile  LICENSE  README.md  Taskfile.yml  go.work  go.work.sum  index.html  not-package.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rfc--request-for-comment--feature-request.md
.github/workflow_setup/: action.yml
.github/workflows/: build.yml  check.yml  deploy_manual.yml  docker.yml  main.yml  main_deploy.yml  main_push.yml  pr.yml  pr_check.yml  release.yml
.github/workflows-disabled/: build.yml  check.yml  docker.yml
.github/workflows_disabled/: build.yml
app/: package-lock.json  package.json
config/: base-lint.toml  paths.js  tsconfig-tool.json  tsconfig-vite-app.json  webpack.config.js
docs/: CNAME  asset-manifest.json  index.html  manifest.json
legacy/: .eslintrc.cjs  README.md  Taskfile.yml  generate_parser.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
legacy/public/: manifest.json
legacy/src/: vite-env.d.ts
manual/: COMMANDS.md  ITEM_PARSE.md  Taskfile.yml  book.toml
manual/src/: SUMMARY.md  chapter_1.md  scope.md
manual/theme/: book.js  index.hbs
next/botw-ist-command/: Cargo.toml
public/: index.html  manifest.json
research/trace/: .clangd  Megaton.toml  Taskfile.yml  client.py
research/trace-view/: .gitignore  Cargo.toml  Taskfile.yml  test.json  test2.json
research/trace-view/src/: event.rs  layout.rs  main.rs  status.rs  thread_view.rs  trace.rs
research/trace-view/src/trace/: mod.rs  parse.rs  tree.rs  view.rs
scripts/: lint.py
server/: .gitignore  Dockerfile  Taskfile.yml  draw.go  env.go  go.mod  go.sum  main.go
sim/parser/: Cargo.toml
sim/runtime/: Cargo.toml
src/: App.css  App.tsx  index.css  index.tsx  main.tsx  react-app-env.d.ts  setupTests.ts  vite-env.d.ts
src/__tests__/: MSWMC_kai.e2e.ts  MSWMC_kai.in.txt  MSWMC_kai.out.txt  MSWMC_simple.e2e.ts  MSWMC_simple.in.txt  MSWMC_simple.out.txt  README.md  apples_999.e2e.ts  apples_999_twice.e2e.ts  apples_999_twice.in.txt  apples_orbs.e2e.ts  apples_orbs.in.txt  aqFinished1.e2e.ts  aqFinished1.in.txt  aqFinished1.out.txt  arrows_quantityCheckExceptions.e2e.ts  arrows_quantityCheckExceptions.in.txt  dropWithExtraLife.e2e.ts  dup_orbs.e2e.ts  effectTransfer.e2e.ts  effectTransfer.in.txt  empty.e2e.ts  gliderOpensGameData.e2e.ts  gliderOpensGameData.out.txt  goldrush_10reload22drop.e2e.ts  goldrush_10reload22drop.in.txt  goldrush_10reload22drop.out.txt  inventoryNuking1.e2e.ts  inventoryNuking1.in.txt  inventoryNukingCounterExample.e2e.ts  inventoryNukingCounterExample.in.txt  inventoryNukingCounterExample.out.txt  slate_VOSDedupe.e2e.ts  wmc_1.e2e.ts  wmc_1.in.txt  wmc_2.e2e.ts  wmc_2.out.txt  wmc_3.e2e.ts  wmc_3.in.txt  wmc_3.out.txt  (+2 more)
src/components/: CommandItem.tsx  CrashScreen.tsx  ItemList.tsx  ItemSlot.tsx  ItemStack.tsx  LoadingScreen.tsx  Text.tsx  TitledList.tsx
src/config/: items.json
src/core/: Command.ts  DisplayableInventory.ts  (+11 more)
(+344 files in other folders)
