[workspace]
resolver = "2"
members = [
    "packages/blueflame", 
    "packages/blueflame-deps", 
    "packages/blueflame-proc-macros", 
    "packages/manual",
    "packages/parser", 
    "packages/runtime",
    "packages/runtime-tests",
    "packages/runtime-wasm",
    "packages/skybook-api",
]

[workspace.dependencies]
anyhow = "1.0.98"
derive_more = { version = "2.0.1", features = ["full"] }
enumset = "1.1.6"
env_logger = "0.11.8"
js-sys = "0.3.77"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
static_assertions = "1.1.0"
teleparse = "0.0.7"
thiserror = "2.0.12"
tokio = { version = "1.45.1" }
ts-rs = "10.1.0"
tsify = { version = "0.5.5", features = ["js"], default-features = false }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
