[package]
name = "skybook-trace-view"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
derive_more = { version = "1.0.0", features = ["full"] }
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
